# 3DWorldCreationWithComputerVisionAndUnreal

./: CMakeLists.txt  CameraSetupAndCaptureScript.py  FirstDraftUE5RealtimeMeshActorClass.cpp  FirstDraftUE5RealtimeMeshActorClass.h  LICENSE  OpenCVLegoMapScannerV1.cpp  OpenCVLegoMapScannerV1.h  README.md  RPIcameraModule.py  UE5_CPP_ProceduralMeshTerrain.h  UE5_CPP_ProceduralMeshTerrainActor.h  pc_contacing_rpi_server_script.py  rpiCamHDR_ImageCaptureScript.py
LISCENSES/: CMAKE_liscense.txt  OpenCV4_1_liscense.txt  PiCamera2_License  Third_party_libraries_used
RaspberryPiCameraHardware/: README.txt
RaspberryPiCameraHardware/PythonCameraScripts/: CameraSetupAndCaptureScript.py  RPICameraModule.py  pc_contacing_rpi_server_script.py
TestImages/: RubbishToClean.h
enc_temp_folder/3a78a41a9aa436738d191e933b63ea13/: OpenCVLegoMapScannerV1.cpp
src/: CMakeLists.txt
src/ProcessingLib/: BrickColourClassifier.h  CMakeLists.txt  ColourDetector.cpp  ColourDetector.h  ColourSpaceVisualiser.cpp  ColourSpaceVisualiser.h  ImageProcessor.cpp  ImageProcessor.h  ImageReader.cpp  ImageReader.h  PredefinedColours.h  SingleChannelHistogram.h
src/ProcessingLib/BrickCVEnums/: BrickColourEnum.h  ChannelType.h  FeatureEnum.h
src/ProcessingLib/BrickExampleColourImages/: ImageDescription.txt
src/ProcessingLib/CustomHDRProcessing/: HDRImageArrayMerger.cpp  HDRImageArrayMerger.h
src/ProcessingLib/ERRORs/: CMakeLists.txt  ErrorOutput.h  ErrorTypes.h
src/ProcessingLib/Histogram/: ColourHistogram.cpp  ColourHistogram.h  HistorgramGraphCreator.h  SingleChannelHistogram.h
src/ProcessingLib/SVMclassifier/: SVMClassifier.h  TrainingInstanceDataStructs.h
src/ProcessingLib/TemplateCode/: CommonOperations.h
src/ProcessingLib/Tests/: CMakeLists.txt  CVAppOutputTester.h
